# stonefish_ros

./: .gitmodules  CMakeLists.txt  README.md  package.xml
cmake/: FindBullet.cmake
data/: girona500_eca.scn  girona500_eca.urdf.xarco
data/scenarios/: girona500_eca.scn  sparus2.scn
data/urdf/: girona500_eca.urdf.xarco
docs/: actuators.rst  conf.py  index.rst  install.rst  license.rst  misc.rst  parser.rst  robots.rst  running.rst  sensors.rst
include/: G500AUVDynamicsManager.h  G500AUVSimulationManager.h  G500IAUVSimulationManager.h  ROSInterface.h  ROSScenarioParser.h  ROSSimulationManager.h  StonefishROSInterface.hpp
include/stonefish_ros/: ROSControlInterface.h  ROSInterface.h  ROSScenarioParser.h  ROSSimulationManager.h
launch/: girona500_auv_dynamics.launch  girona500_auv_simulator.launch  girona500_eca_description.launch  girona500_eca_parsed_simulator.launch  girona500_eca_simulator.launch  girona500_iauv_simulator.launch  parsed_simulation.launch  simulator.launch  simulator_nogpu.launch  sparus2_parsed_simulator.launch
msg/: BeaconInfo.msg  DVL.msg  DVLBeam.msg  Event.msg  EventArray.msg  INS.msg  NEDPose.msg  ThrusterState.msg
src/: G500AUVDynamicsManager.cpp  G500AUVSimulationManager.cpp  G500IAUVSimulationManager.cpp  ROSControlInterface.cpp  ROSInterface.cpp  ROSScenarioParser.cpp  ROSSimulationManager.cpp  girona500_auv_dynamics.cpp  girona500_auv_simulator.cpp  girona500_iauv_simulator.cpp  parsed_simulator.cpp  parsed_simulator_nogpu.cpp
srv/: Respawn.srv  SonarSettings.srv  SonarSettings2.srv
