<?xml version="1.0"?>
<package format="2">
	<name>stonefish_ros</name>
	<version>1.3.0</version>
	<description>The stonefish_ros package</description>
	<author email="patryk.cieslak@udg.edu">Patryk Cieslak</author>
	<maintainer email="patryk.cieslak@udg.edu">Patryk Cieslak</maintainer>
	<license>GPL-3.0</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>roslib</depend>
	<depend>message_generation</depend>
	<depend>message_runtime</depend>
	<depend>cola2_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>nav_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>std_msgs</depend>
	<depend>std_srvs</depend>
	<depend>tf</depend>
	<depend>tf_conversions</depend>
	<depend>Stonefish</depend>
</package>
